# fashion-webcrawler

./: 1_crawler.py  2_filterURLs.py  3_productLinks.py  4_get_dataset_IDs.py  5_product_pages.py  actors.json  combined_data.json  dataset_ids.json  dynamicURL.py  fashion_websites_crawl_results.json  getdatafromIDs.py  getruns.py  loadedUrls.json  pyproject.toml  response.json  testapi.py
